Jogadores table:more padding-block fot the table caption

--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -16,6 +16,7 @@ caption {
   background-color: #ccd18c; /*undecided*/
   border: 1px solid rgb(17, 0, 255);
   border-bottom: none;
+  padding-block: 0.3rem;
 }
 
 .jogadores-table {
