--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -18,10 +18,10 @@ caption {
 
 .jogadores-table {
   margin: 0 auto 1rem;
-  background-color: rgb(190, 186, 186);
+  background-color: rgb(255, 243, 243);
   width: 80vw;
   margin-bottom: 1rem;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5); */
   overflow: hidden;
 }
 
@@ -67,7 +67,7 @@ tr .image-container:hover,
   background-color: #ecfa25; /*undecised*/
 }
 tbody tr:nth-child(even) {
-  background-color: rgb(141, 141, 141);
+  background-color: rgb(199, 198, 198);
 }
 
 /*****************************************/
