--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -10,18 +10,17 @@
 }
 caption {
   color: rgb(255, 255, 255); /*undecided*/
-  background-color: hsl(130, 90%, 38%); /*undecided*/
-
+  background-color: hsl(0, 24%, 40%); /*undecided*/
   border-bottom: none;
-  padding-block: 0.3rem;
+  padding-block: 0.5rem;
 }
 
 .jogadores-table {
   margin: 0 auto 1rem;
-  background-color: rgb(255, 243, 243);
+  background-color: rgb(250, 250, 250);
   width: 80vw;
   margin-bottom: 1rem;
-  /* box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5); */
+  border-radius: 0.6rem;
   overflow: hidden;
 }
 
@@ -29,15 +28,12 @@ caption {
 .jogadores-table th,
 .jogadores-table td {
   border-collapse: collapse;
-  border: 1px solid rgb(0, 0, 0);
-  /* border-bottom: 2px solid rgb(255, 0, 0); */
-  border: none; /* Remove all borders first */
 }
 
 .jogadores-table th,
 .jogadores-table td {
   padding: 0.3rem 0.5rem;
-  border-bottom: 1px solid rgb(0, 0, 0); /* Only bottom borders */
+  border-bottom: 1px solid rgb(255, 255, 255);
 }
 
 .jogadores-table th {
@@ -49,12 +45,16 @@ caption {
   color: white; /*undecised*/
   text-align: left;
   padding: 1.2rem 0.5rem;
-  background-color: rgb(0, 0, 0); /*undecised*/
-  border-bottom: 2px solid #ffffff; /*undecised*/
+  background-color: var(--dark); /*undecised*/
+  border-bottom: 2px solid #888888; /*undecised*/
+}
+
+.jogadores-table th:nth-child(1) {
+  text-align: center;
 }
 
 tr .image-container {
-  background-color: rgb(0, 0, 0); /*decised*/
+  background-color: var(--dark); /*decised*/
   text-align: center;
 }
 
@@ -62,12 +62,14 @@ tr .image-container img {
   width: 2rem;
   border-radius: 50%;
 }
+
 tr .image-container:hover,
 .jogadores-table tr:hover {
   background-color: #ecfa25; /*undecised*/
 }
+
 tbody tr:nth-child(even) {
-  background-color: rgb(199, 198, 198);
+  background-color: rgb(226, 226, 226);
 }
 
 /*****************************************/
