--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -20,7 +20,7 @@ caption {
   background-color: rgb(250, 250, 250);
   width: 80vw;
   margin-bottom: 1rem;
-  border-radius: 0.6rem;
+  border-radius: 0.3rem;
   overflow: hidden;
 }
 
@@ -32,7 +32,7 @@ caption {
 
 .jogadores-table th,
 .jogadores-table td {
-  padding: 0.3rem 0.5rem;
+  padding: 0.3rem 0.3rem;
   border-bottom: 1px solid rgb(255, 255, 255);
 }
 
@@ -59,6 +59,18 @@ tr .image-container {
 }
 
 tr .image-container img {
+  width: 2rem;
+  border-radius: 50%;
+}
+
+tr .team-container {
+  background-color: #25befa;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5rem;
+}
+tr .team-container img {
   width: 2rem;
   border-radius: 50%;
 }
