Jogadores' table: less border-radius, no more padding inline for the whole page

--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -1,6 +1,6 @@
 .jogadores-container {
   min-height: var(--page-min-height);
-  padding-inline: var(--page-padding-inline);
+  /* padding-inline: var(--page-padding-inline); */
   background-color: #ffffff; /*undecided*/
 }
 
