--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -19,10 +19,11 @@ caption {
 .jogadores-table {
   margin: 0 auto 1rem;
   background-color: rgb(250, 250, 250);
-  width: 70vw;
+  width: 80vw;
   margin-bottom: 1rem;
   border-radius: 0.3rem;
   overflow: hidden;
+  font-size: 0.8rem;
 }
 
 .jogadores-table,
