--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -23,7 +23,28 @@ caption {
   margin-bottom: 1rem;
   border-radius: 0.3rem;
   overflow: hidden;
-  font-size: 0.9rem;
+  font-size: 0.95rem;
+
+  /*small*/
+  @media (min-width: 576px) {
+  }
+
+  /*medium*/
+  @media (min-width: 768px) {
+    font-size: 1rem;
+  }
+
+  /*large*/
+  @media (min-width: 992px) {
+  }
+
+  /*extra large*/
+  @media (min-width: 1200px) {
+  }
+
+  /*extra extra large*/
+  @media (min-width: 1400px) {
+  }
 }
 
 .jogadores-table,
@@ -73,7 +94,7 @@ tr .team-container {
   column-gap: 0.4rem;
 }
 tr .team-container img {
-  width: 1.5rem;
+  width: 2rem;
   border-radius: 50%;
 }
 
