--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -19,7 +19,7 @@ caption {
 .jogadores-table {
   margin: 0 auto 1rem;
   background-color: rgb(250, 250, 250);
-  width: 80vw;
+  width: 90vw;
   margin-bottom: 1rem;
   border-radius: 0.3rem;
   overflow: hidden;
@@ -32,19 +32,20 @@ caption {
   /*medium*/
   @media (min-width: 768px) {
     font-size: 1rem;
+    width: 80vw;
   }
 
   /*large*/
   @media (min-width: 992px) {
+    width: 70vw;
   }
 
   /*extra large*/
   @media (min-width: 1200px) {
+    width: 60vw;
   }
 
   /*extra extra large*/
-  @media (min-width: 1400px) {
-  }
 }
 
 .jogadores-table,
@@ -55,7 +56,7 @@ caption {
 
 .jogadores-table th,
 .jogadores-table td {
-  padding: 0.3rem 0.3rem;
+  padding: 0.3rem;
   border-bottom: 1px solid rgb(255, 255, 255);
 }
 
@@ -87,12 +88,16 @@ tr .image-container img {
 }
 
 tr .team-container {
-  background-color: #25befa;
+  vertical-align: middle;
+  background-color: red;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
-  column-gap: 0.4rem;
 }
+tr .team-container span {
+  vertical-align: middle;
+  background-color: rgb(68, 0, 255);
+}
+
 tr .team-container img {
   width: 2rem;
   border-radius: 50%;
