--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -19,11 +19,11 @@ caption {
 .jogadores-table {
   margin: 0 auto 1rem;
   background-color: rgb(250, 250, 250);
-  width: 90vw;
+  max-width: 90vw;
   margin-bottom: 1rem;
   border-radius: 0.3rem;
   overflow: hidden;
-  font-size: 0.95rem;
+  font-size: 0.97rem;
 
   /*small*/
   @media (min-width: 576px) {
@@ -96,6 +96,7 @@ tr .team-container {
 tr .team-container span {
   vertical-align: middle;
   background-color: rgb(68, 0, 255);
+  margin-left: 0.2rem;
 }
 
 tr .team-container img {
