Jogadores' table: the cption is now black and bold

--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -10,10 +10,12 @@
   -webkit-overflow-scrolling: touch; /*to allow horizonatl scroll*/
 }
 caption {
-  color: rgb(255, 255, 255); /*undecided*/
+  color: var(--dark); /*undecided*/
   background-color: var(--primary-color2); /*undecided*/
   border-bottom: none;
   padding-block: 0.5rem;
+  font-size: 1.1rem;
+  font-weight: 600;
 }
 
 .jogadores-table {
