--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -68,11 +68,11 @@ caption {
   border-bottom: 2px solid #000000;
   z-index: 10; */
 
-  color: white; /*undecised*/
+  color: var(--light); /*undecised*/
   text-align: left;
   padding: 1.2rem 0.5rem;
   background-color: var(--primary-color1); /*undecised*/
-  border-bottom: 2px solid #888888; /*undecised*/
+  border-bottom: 2px solid #423e3e; /*undecised*/
 }
 
 .jogadores-table th:nth-child(1) {
