--- a/src/pages/estatistica/assistsTable/AssistsTable.css
+++ b/src/pages/estatistica/assistsTable/AssistsTable.css
@@ -1,9 +1,9 @@
 .assists-table-container {
-  height: auto;
-  margin-bottom: 50px;
+  margin-bottom: 50px; /*undecided*/
   overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-  margin: 0.3rem;
+  -webkit-overflow-scrolling: touch; /*to allow horizonatl scroll*/
+
+  background-color: blueviolet;
 }
 .AssistsTable-container h3 {
   display: inline-flex;
