--- a/src/pages/estatistica/assistsTable/AssistsTable.css
+++ b/src/pages/estatistica/assistsTable/AssistsTable.css
@@ -7,23 +7,55 @@
 }
 
 .assists-table {
-  width: 90vw;
-  margin-left: auto;
-  margin-right: auto;
+  /*
+
   border-collapse: collapse;
   border: 1px solid white;
   border-radius: 10px;
   margin-bottom: 20px;
   background-color: silver;
-  box-shadow: 0 4px 8px black;
+  box-shadow: 0 4px 8px black; */
+
+  margin: 0 auto 1rem;
+  background-color: rgb(250, 250, 250);
+  width: 90vw;
+  margin-bottom: 1rem;
+  overflow: hidden;
+  font-size: 0.93rem;
+
+  /*small*/
+  @media (min-width: 576px) {
+  }
+
+  /*medium*/
+  @media (min-width: 768px) {
+    font-size: 1rem;
+    width: 80vw;
+  }
+
+  /*large*/
+  @media (min-width: 992px) {
+    width: 70vw;
+  }
+
+  /*extra large*/
+  @media (min-width: 1200px) {
+    width: 60vw;
+  }
+
+  /*extra extra large*/
 }
+
+.assists-table,
 .assists-table th,
 .assists-table td {
-  padding: 0.5rem;
+  /* padding: 0.5rem;
   text-align: center;
   border: 1px solid grey;
   border-bottom: 2px solid white;
-  font-size: 0.75rem;
+  font-size: 0.75rem; */
+
+  border-collapse: collapse;
 }
 .assists-table th {
   background-color: rgb(255, 50, 50);
