--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -21,7 +21,7 @@ caption {
 .jogadores-table {
   margin: 0 auto 1rem;
   background-color: rgb(250, 250, 250);
-  max-width: 90vw;
+  width: 90vw;
   margin-bottom: 1rem;
   overflow: hidden;
   font-size: 0.93rem;
