--- a/src/pages/estatistica/assistsTable/AssistsTable.css
+++ b/src/pages/estatistica/assistsTable/AssistsTable.css
@@ -57,6 +57,14 @@
 
   border-collapse: collapse;
 }
+
+.assists-table th,
+.assists-table td {
+  padding: 0.3rem;
+  border-bottom: 1px solid var(--highlight-color1);
+  border-left: 1px solid rgb(204, 204, 204);
+}
+
 .assists-table th {
   background-color: rgb(255, 50, 50);
   color: white;
