--- a/src/pages/estatistica/assistsTable/AssistsTable.css
+++ b/src/pages/estatistica/assistsTable/AssistsTable.css
@@ -66,10 +66,21 @@
 }
 
 .assists-table th {
-  background-color: rgb(255, 50, 50);
+  /* background-color: rgb(255, 50, 50);
   color: white;
   font-weight: bold;
-  padding: 1.3rem;
+  padding: 1.3rem; */
+
+  /* position: sticky;
+  top: 0;
+  border-bottom: 2px solid #000000;
+  z-index: 10; */
+
+  color: var(--light); /*undecised*/
+  text-align: left;
+  padding: 1.2rem 0.5rem;
+  background-color: var(--primary-color1); /*undecised*/
+  border-bottom: 2px solid #423e3e; /*undecised*/
 }
 
 .highlightBestAssister {
@@ -78,6 +89,7 @@
 .assists-table tr:hover {
   background-color: #ecfa25;
 }
+/*
 @media screen and (max-width: 758px) {
   .AssistsTable-container h3 {
     display: inline-flex;
@@ -87,7 +99,7 @@
     margin: 10px;
     border-radius: 3px;
     justify-content: center;
-    /*text-decoration: underline solid white;*/
+    text-decoration: underline solid white;
     font-size: 1rem;
   }
   .assists-table th,
@@ -105,3 +117,4 @@
     padding: 0.3rem;
   }
 }
+*/
