--- a/src/pages/estatistica/assistsTable/AssistsTable.css
+++ b/src/pages/estatistica/assistsTable/AssistsTable.css
@@ -10,10 +10,8 @@
   /*
 
   border-collapse: collapse;
-  border: 1px solid white;
-  border-radius: 10px;
   margin-bottom: 20px;
-  box-shadow: 0 4px 8px black; */
+  */
 
   margin: 0 auto 1rem;
   background-color: rgb(250, 250, 250);
