--- a/src/pages/estatistica/assistsTable/AssistsTable.css
+++ b/src/pages/estatistica/assistsTable/AssistsTable.css
@@ -3,7 +3,7 @@
   overflow-x: auto;
   -webkit-overflow-scrolling: touch; /*to allow horizonatl scroll*/
 
-  background-color: blueviolet;
+  background-color: rgb(147, 226, 43);
 }
 
 .assists-table {
