Jogadores' Table: noe the players' photo and their name are on the same cell

--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -78,6 +78,7 @@ caption {
 tr .image-container {
   text-align: center;
   border-left: none;
+  background-color: #4ed470;
 }
 
 tr .image-container img {
