--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -1,7 +1,7 @@
 .jogadores-container {
   min-height: var(--page-min-height);
   /* padding-inline: var(--page-padding-inline); */
-  background-color: #ffffff; /*undecided*/
+  background-color: green; /*undecided*/
 }
 
 .jogadores-table-container {
