--- a/src/pages/estatistica/assistsTable/AssistsTable.css
+++ b/src/pages/estatistica/assistsTable/AssistsTable.css
@@ -3,16 +3,17 @@
   overflow-x: auto;
   -webkit-overflow-scrolling: touch; /*to allow horizonatl scroll*/
 
-  background-color: rgb(147, 226, 43);
+  background-color: rgb(117, 108, 108);
 }
 
 .assists-table {
   margin: 0 auto 1rem;
-  background-color: rgb(250, 250, 250);
+  background-color: rgb(20, 20, 20);
   width: 90vw;
   margin-bottom: 1rem;
   overflow: hidden;
   font-size: 0.9rem;
+  color: white;
 
   /*small*/
   @media (min-width: 576px) {
@@ -52,8 +53,13 @@
 .assists-table th,
 .assists-table td {
   padding: 0.3rem;
-  border-bottom: 1px solid var(--highlight-color1);
-  border-left: 1px solid rgb(204, 204, 204);
+  border-bottom: 0.1rem solid var(--highlight-color1);
+  /* border-left: 1px solid rgb(204, 204, 204); */
+}
+
+.assists-table th:nth-child(1),
+.assists-table td:nth-child(1) {
+  border-left: none;
 }
 
 .assists-table th {
@@ -70,14 +76,59 @@
   color: var(--light); /*undecised*/
   text-align: left;
   padding: 1.2rem 0.5rem;
-  background-color: var(--primary-color1); /*undecised*/
+  /* background-color: var(--primary-color1);*/ /* undecised */
+  background-color: black;
   border-bottom: 2px solid #423e3e; /*undecised*/
 }
 
-/* .jogadores-table th:nth-child(1) {
-  text-align: center;
-  border-left: none;
-} */
+.assists-table thead th:nth-child(1) {
+  text-align: left;
+  /* background-color: rgb(25, 0, 255); */
+}
+.assists-table thead th:nth-child(2) {
+  text-align: right;
+  /* background-color: red; */
+}
+
+.as-player-container {
+  /* background-color: #4ed470; */
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding-left: 0.3rem;
+}
+
+.poseition-number-container {
+  min-width: 1rem;
+}
+.as-player-img-container {
+  display: flex;
+  align-items: flex-end;
+}
+.as-player-img-container img {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  border: 0.5px solid var(--light);
+}
+
+.as-team-container {
+  /* background-color: red; */
+  display: flex;
+  flex-direction: column;
+}
+.as-name-container {
+  /* background-color: blue; */
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
+.as-name-container img {
+  width: 1.2rem;
+  height: 1.2rem;
+  border-radius: 50%;
+  border: 0.5px solid var(--light);
+}
 
 /*
 tr .image-container {
@@ -91,22 +142,22 @@ tr .image-container {
   border-radius: 50%;
 }
 
-tr .team-container {
+tr .as-team-container {
   display: flex;
   align-items: center;
 }
-tr .team-container span {
+tr .as-team-container span {
   margin-left: 0.2rem;
 }
 
-tr .team-container img {
+tr .as-team-container img {
   width: 2rem;
   border-radius: 50%;
 } */
 
-tbody tr:nth-child(even) {
-  background-color: rgb(226, 226, 226);
-}
+/* tbody tr:nth-child(even) {
+  background-color: rgb(29, 29, 29);
+} */
 
 /* .highlightBestAssister {
   background-color: green;
@@ -114,6 +165,13 @@ tbody tr:nth-child(even) {
 .assists-table tr:hover {
   background-color: #4ed470;
 }
+
+.assist-number {
+  /* background-color: red; */
+  text-align: right;
+  padding-right: 0.5rem;
+}
+
 /*
 @media screen and (max-width: 758px) {
   .AssistsTable-container h3 {
