--- a/src/pages/jogadores/Jogadores.css
+++ b/src/pages/jogadores/Jogadores.css
@@ -1,7 +1,7 @@
 .jogadores-container {
   min-height: var(--page-min-height);
   /* padding-inline: var(--page-padding-inline); */
-  background-color: green; /*undecided*/
+  background-color: rgb(221, 214, 214); /*undecided*/
 }
 
 .jogadores-table-container {
@@ -70,48 +70,43 @@ caption {
 .jogadores-table th {
   color: var(--light); /*undecised*/
   text-align: left;
-  padding: 1.2rem 0.5rem;
+  padding: 1rem 0.5rem;
   background-color: var(--primary-color1); /*undecised*/
   border-bottom: 2px solid #504b4b; /*undecised*/
 }
 
-.jogadores-table th:nth-child(1) {
-  text-align: center;
-  border-left: none;
-}
-
-tr .image-container {
+tr .jg-player-container {
   text-align: center;
   border-left: none;
   display: flex;
   align-items: center;
-  gap: 0.15rem;
+  gap: 0.2rem;
 }
 
-tr .image-container img {
+tr .jg-player-container img {
   width: 2rem;
   border-radius: 50%;
+  border: 0.5px solid var(--dark);
 }
 
-tr .team-container {
+tr .jg-team-container {
   display: flex;
   align-items: center;
-}
-tr .team-container span {
-  margin-left: 0.2rem;
+  gap: 0.2rem;
 }
 
-tr .team-container img {
-  width: 2rem;
+tr .jg-team-container img {
+  width: 1.5rem;
   border-radius: 50%;
+  border: 0.5px solid var(--dark);
 }
 
-tr .image-container:hover,
+tr .jg-player-container:hover,
 .jogadores-table tr:hover {
   background-color: #4ed470; /*undecised*/
 }
 
-tbody tr:nth-child(even) {
+.jogadores-table tbody tr:nth-child(even) {
   background-color: rgb(226, 226, 226);
 }
 
