--- a/src/pages/estatistica/assistsTable/AssistsTable.css
+++ b/src/pages/estatistica/assistsTable/AssistsTable.css
@@ -83,6 +83,7 @@
 
 .assists-table thead th:nth-child(1) {
   text-align: left;
+  padding-left: 1.5rem;
   /* background-color: rgb(25, 0, 255); */
 }
 .assists-table thead th:nth-child(2) {
