--- a/src/components/table/StatTable.css
+++ b/src/components/table/StatTable.css
@@ -9,7 +9,7 @@
 .assists-table {
   margin: 0 auto 1rem;
   background-color: rgb(20, 20, 20);
-  width: 90vw;
+  width: 97vw;
   margin-bottom: 1rem;
   overflow: hidden;
   font-size: 0.9rem;
@@ -113,12 +113,17 @@
   /* background-color: red; */
   display: flex;
   flex-direction: column;
+  
+}
+.as-team-container .player-name{
+  margin-left:0.12rem;
 }
 .as-name-container {
   /* background-color: blue; */
   display: flex;
   align-items: center;
   gap: 0.2rem;
+  
 }
 .as-name-container img {
   width: 1.2rem;
@@ -160,7 +165,7 @@ tr .as-team-container img {
   background-color: green;
 } */
 .assists-table tr:hover {
-  background-color: #4ed470;
+  background-color: #416e4bff;
 }
 
 .assist-number {
