--- a/src/components/table/StatTable.css
+++ b/src/components/table/StatTable.css
@@ -3,7 +3,7 @@
   overflow-x: auto;
   -webkit-overflow-scrolling: touch; /* to allow horizonatl scroll */
 
-  background-color: rgb(117, 108, 108);
+  background-color: rgb(117, 108, 108); /*undecided*/
 }
 
 .assists-table {
