--- a/src/pages/estatistica/Estatistica.css
+++ b/src/pages/estatistica/Estatistica.css
@@ -1,4 +1,4 @@
 .estatistica {
   min-height: var(--page-min-height);
-  background-color: rgb(117, 108, 108);
+  background-color: rgb(117, 108, 108); /*undecided*/
 }
