--- a/src/pages/tabela/Tabela.css
+++ b/src/pages/tabela/Tabela.css
@@ -45,7 +45,7 @@
   background-color: rgb(70, 206, 247);
 }
 .tabela-table tr:hover {
-  background-color: #ecfa25;
+  background-color: #ecfa25; /*undecided*/
 }
 
 /*
