minor color change for solving problem in deployment

--- a/src/pages/sobre/Sobre.css
+++ b/src/pages/sobre/Sobre.css
@@ -6,7 +6,7 @@
 .sobre-container-text {
   margin-top: 1rem;
 
-  background-color: orange; /*unnecessary*/
+  background-color: purple; /*unnecessary*/
 }
 
 .sobre-container-text p {
