--- a/src/pages/sobre/Sobre.css
+++ b/src/pages/sobre/Sobre.css
@@ -13,7 +13,7 @@
 }
 
 .img-container {
-  background-color: orange;
+  background-color: aqua;
   display: flex;
   justify-content: center;
   align-items: center;
