--- a/src/pages/sobre/Sobre.css
+++ b/src/pages/sobre/Sobre.css
@@ -4,8 +4,13 @@
 }
 
 .sobre-container-text {
+  background-color: aqua;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 1rem;
-  background-color: rgb(230, 209, 90); /*unnecessary*/
+  border: 2px solid green;
+  border-radius: 8px;
 }
 
 .sobre-container-text p {
