--- a/src/layout/footer/Footer.css
+++ b/src/layout/footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-  background-color: rgb(46, 43, 43);
+  background-color: brown;
   height: auto;
   width: 100%;
   padding: 1rem 0.1rem;
