--- a/src/layout/footer/Footer.css
+++ b/src/layout/footer/Footer.css
@@ -1,10 +1,9 @@
 .footer-container {
   background-color: var(--dark);
-  height: auto;
-  width: 100%;
   padding: 1rem 0.1rem;
   display: flex;
   justify-content: center;
+  background-color: red;
 }
 
 .footer-logo-conatiner {
