--- a/src/components/atoms/pageHeading/PageHeading.css
+++ b/src/components/atoms/pageHeading/PageHeading.css
@@ -11,7 +11,7 @@
   background-color: var(--dark);
   border-radius: var(--h1-container-border-radius);
   text-decoration: underline solid;
-  border: 1px solid rgb(0, 255, 0);
+  border: 1px solid yellow;
   font-size: 1.2rem;
   padding-block: 0.2em;
 
