--- a/src/components/atoms/pageHeading/PageHeading.css
+++ b/src/components/atoms/pageHeading/PageHeading.css
@@ -11,7 +11,7 @@
   background-color: rgb(14, 131, 190); /*undecided*/
   border-radius: var(--h1-container-border-radius);
   text-decoration: underline solid;
-  border: 1px solid yellow;
+  border: 1px solid orange; /*undecided*/
   font-size: 1.2rem;
   padding-block: 0.2em;
 
