--- a/src/components/atoms/pageHeading/PageHeading.css
+++ b/src/components/atoms/pageHeading/PageHeading.css
@@ -8,7 +8,7 @@
 .page-heading-container h1 {
   width: 60vw;
   color: var(--light);
-  background-color: rgb(107, 55, 55); /*undecided*/
+  background-color: rgba(60, 89, 214, 1); /*undecided*/
   border-radius: var(--h1-container-border-radius);
   text-decoration: underline solid;
   border: 1px solid orange; /*undecided*/
