--- a/src/components/atoms/pageHeading/PageHeading.css
+++ b/src/components/atoms/pageHeading/PageHeading.css
@@ -13,7 +13,7 @@
   text-decoration: underline solid;
   border: 1px solid orange; /*undecided*/
   font-size: 1.2rem;
-  padding-block: 0.2em;
+  padding-block: 0.2rem;
 
   /*small*/
 
