--- a/src/pages/inicio/Inicio.css
+++ b/src/pages/inicio/Inicio.css
@@ -93,8 +93,7 @@ button {
     background: url(../../assets/images/hero/stadium-4760441_1920.jpg) center /
         cover no-repeat padding-box,
       /* Gradient border second (clipped to border-box) */
-        linear-gradient(90deg, orange, blue, green, red, purple, yellow)
-        border-box;
+        linear-gradient(90deg, orange, blue, green, red, yellow) border-box;
   }
 }
 
