--- a/src/components/atoms/pageHeading/PageHeading.css
+++ b/src/components/atoms/pageHeading/PageHeading.css
@@ -8,7 +8,7 @@
 .page-heading-container h1 {
   width: 60vw;
   color: var(--light);
-  background: linear-gradient(90deg, red, orange); /*undecided*/
+  background: linear-gradient(90deg, brown, grey, maroon); /*undecided*/
   /* border-radius: var(--h1-container-border-radius); */
   text-decoration: underline solid;
   font-size: 1.2rem;
