--- a/src/components/atoms/pageHeading/PageHeading.css
+++ b/src/components/atoms/pageHeading/PageHeading.css
@@ -8,7 +8,7 @@
 .page-heading-container h1 {
   width: 60vw;
   color: var(--light);
-  background: linear-gradient(90deg, brown, grey, maroon); /*undecided*/
+  /* background: linear-gradient(90deg, brown, grey, maroon);*/ /* undecided */
   /* border-radius: var(--h1-container-border-radius); */
   text-decoration: underline solid;
   font-size: 1.2rem;
@@ -17,7 +17,7 @@
 
   /* --- Gradient Border Implementation --- */
   /* 1. Use background-clip to ensure the background only covers the padding box */
-  background: linear-gradient(45deg, orange, red) padding-box,
+  background: linear-gradient(45deg, brown, grey, maroon) padding-box,
     /* Inner background color */ linear-gradient(90deg, red, blue, orange)
       border-box; /* Gradient for the border */
 
