--- a/src/layout/navbar/Navbar.css
+++ b/src/layout/navbar/Navbar.css
@@ -29,7 +29,8 @@
 .logo {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   gap: 5px;
 }
 
