--- a/src/layout/navbar/Navbar.css
+++ b/src/layout/navbar/Navbar.css
@@ -111,7 +111,7 @@
 }
 
 /* Mobile responsiveness: Styles for smaller screens */
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .menu {
     display: none; /* Hide menu on small screens */
     flex-direction: column;
@@ -136,7 +136,6 @@
   }
   .logo img {
     width: 4rem;
-    padding-left: 18px;
   }
   .logo h1 {
     color: rgb(0, 0, 0);
