--- a/src/components/atoms/pageHeading/PageHeading.css
+++ b/src/components/atoms/pageHeading/PageHeading.css
@@ -6,7 +6,7 @@
 }
 
 .page-heading-container h1 {
-  width: 60vw;
+  width: 80vw; /*OG: 60vw*/
   color: var(--light);
   /* background: linear-gradient(90deg, brown, grey, maroon);*/ /* undecided */
   /* border-radius: var(--h1-container-border-radius); */
