for daily commit

--- a/src/components/atoms/pageHeading/PageHeading.css
+++ b/src/components/atoms/pageHeading/PageHeading.css
@@ -6,7 +6,7 @@
 }
 
 .page-heading-container h1 {
-  width: 80vw; /*OG: 60vw*/
+  width: 98vw; /*OG: 60vw*/
   color: var(--light);
   /* background: linear-gradient(90deg, brown, grey, maroon);*/ /* undecided */
   /* border-radius: var(--h1-container-border-radius); */
@@ -18,8 +18,8 @@
   /* --- Gradient Border Implementation --- */
   /* 1. Use background-clip to ensure the background only covers the padding box */
   background: linear-gradient(25deg, orange, blue, red) padding-box,
-    /* Inner background color */ linear-gradient(90deg, magenta, black, green)
-      border-box; /* Gradient for the border */
+    /* Inner background color */
+      linear-gradient(90deg, magenta, black, lightseagreen) border-box; /* Gradient for the border */
 
   /* 2. Set the border-radius (this will now work) */
   border-radius: var(--h1-container-border-radius);
