--- a/src/components/atoms/pageHeading/PageHeading.css
+++ b/src/components/atoms/pageHeading/PageHeading.css
@@ -6,7 +6,7 @@
 }
 
 .page-heading-container h1 {
-  width: 98vw; /*OG: 60vw*/
+  width: 80vw; /*OG: 60vw*/
   color: var(--light);
   /* background: linear-gradient(90deg, brown, grey, maroon);*/ /* undecided */
   /* border-radius: var(--h1-container-border-radius); */
@@ -17,15 +17,15 @@
 
   /* --- Gradient Border Implementation --- */
   /* 1. Use background-clip to ensure the background only covers the padding box */
-  background: linear-gradient(25deg, orange, blue, red) padding-box,
-    /* Inner background color */ linear-gradient(90deg, magenta, black, aqua)
+  background: linear-gradient(25deg, orange, rgb(255, 0, 0), red) padding-box,
+    /* Inner background color */ linear-gradient(90deg, green, black, aqua)
       border-box; /* Gradient for the border */
 
   /* 2. Set the border-radius (this will now work) */
   border-radius: var(--h1-container-border-radius, 12px);
 
   /* 3. Set a transparent border width (the gradient will show through this width) */
-  border: 2px solid transparent;
+  border: 5px solid transparent;
 
   /*small*/
 
